--- a/day_00/ex02/form.html
+++ b/day_00/ex02/form.html
@@ -14,9 +14,9 @@
     <p><label for="email">Email: </label><input type="email" id="email"></p>
     <p><label for="student">Student at 42?: </label><input type="checkbox" id="student"></p>
     <p>
-        <label for="gender_male">Male</label><input id="gender_male" type="radio">
-        <label for="gender_female">Female</label><input id="gender_female" type="radio">
-        <label for="gender_other">Other</label><input id="gender_other" type="radio">
+        <label for="gender_male">Male</label><input id="gender_male" type="radio" name="gender">
+        <label for="gender_female">Female</label><input id="gender_female" type="radio" name="gender">
+        <label for="gender_other">Other</label><input id="gender_other" type="radio" name="gender">
     </p>
     <button type="button" onclick="displayFormContents();">Run that sexy Javascript !</button>
 </form>
