--- a/day_00/ex03/copy.html
+++ b/day_00/ex03/copy.html
@@ -9,25 +9,25 @@
 <ol>
     <li>
         <h2>Frontend</h2>
-        <p data-value="80">HTML5</p>
+        <p data-value="80" style="width: 80%">HTML5</p>
         <progress class="python" value="80" max="100">
         </progress>
-        <p data-value="60">CSS3</p>
+        <p data-value="60" style="width: 60%">CSS3</p>
         <progress class="python" value="60" max="100">
         </progress>
-        <p data-value="50">jQuery</p>
+        <p data-value="50" style="width: 50%">jQuery</p>
         <progress class="python" value="50" max="100">
         </progress>
     </li>
     <li>
         <h2>Backend</h2>
-        <p data-value="75">Python</p>
+        <p data-value="75" style="width: 75%">Python</p>
         <progress class="python" value="75" max="100">
         </progress>
-        <p data-value="65">PHP</p>
+        <p data-value="65" style="width: 65%">PHP</p>
         <progress class="python" value="65" max="100">
         </progress>
-        <p data-value="35">Node.js</p>
+        <p data-value="35" style="width: 35%">Node.js</p>
         <progress class="python" value="35" max="100">
         </progress>
     </li>
